--- a/report/sections/ch4-dcmotorcontroller.tex
+++ b/report/sections/ch4-dcmotorcontroller.tex
@@ -35,6 +35,6 @@ The input pins on the motor controller also allow for control with PWM (Pulse Wi
 \end{figure}
 %TODO: Missing caption and label!
 
-To enable easier access to the pins on the motor controller, a custom board has been created for ease of use. The green terminals A and B are connection terminals for the AOUT and BOUT respectively. The terminal C is for the battery pack that supplies the voltage to the motor controller and the DC motors, which in this case is 5 AA batteries. The label D is the Pololu DRV8833 and the final label E are the connections to the Rasperry Pi. 
+To enable easier access to the pins on the motor controller, a custom board has been created for ease of use. The green terminals A and B are connection terminals for the AOUT and BOUT respectively. The terminal C is for the battery pack that supplies the voltage to the motor controller and the DC motors, which in this case is 5 AA batteries. The label D is the Pololu DRV8833 and the final label E are the connections to the Raspberry Pi. 
 
 Operating the motor controller requires 5 pins from the Raspberry Pi, 4 to control the input pins on the DRV8833 and a ground pin. Since we are controlling the motor controller using HIGH and LOW, the controller can be connected to any of the regular digital GPIO pins.
