Fixed the comments

--- a/report/sections/appendix.tex
+++ b/report/sections/appendix.tex
@@ -1,6 +1,4 @@
 \section{Code for close proximity detection}
-\lstinputlisting[firstline=1, lastline=161, title=getdist(), language=Python]{../code/autonomous-rover/obstacle-avoidance-args.py}
+\lstinputlisting[firstline=1, lastline=161, title=getdist(), language=Python, label=obs-avoid-code]{../code/autonomous-rover/obstacle-avoidance-args.py}
 
 
-%\section{Motor controller directional test}
-%\lstinputlisting[firstline=1, lastline=73, title=motor-direction-test.py, language=Python]{../code/autonomous-rover/motor-direction-test.py}
