Fixed development diagram, spelling, todos

--- a/report/sections/ch4-description.tex
+++ b/report/sections/ch4-description.tex
@@ -4,10 +4,9 @@ The figure below shows the modules we are planning to develop during the Develop
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=.7]{images/developmentdiagram.pdf}
+	\includegraphics[scale=.5]{images/developmentdiagram.png}
 	\caption{Diagram of modules we are developing}
 	\label{fig:developmentdiagram}
 \end{figure}
-%TODO: Remove 'on Raspbian' from the main node. Update
 
 The rover will consist of two main things: A LIDAR-Lite laser module, recording distances and creating a map using SLAM and a close proximity detection and navigation system.
