--- a/report/sections/ch4-laser.tex
+++ b/report/sections/ch4-laser.tex
@@ -150,7 +150,7 @@ Thereafter, we call the setUpPins() function which makes the system call 3 separ
 The initialization of ROS happens afterwards, by calling the \textit{init} function with arguments and the name of our module. The module name is used as the node name in ROS. In the next line, ROS also starts to advertise messages to \textbackslash\textit{scan}, where all the scan results are being pushed to.
 
 The rest of the code consists of two loops, one \textit{while} loop and one \textit{for} loop. The \textit{while} loop loops until the node returns anything other than OK. In here, a new LaserScan is being created where we ask ROS for the current time, set some hardcoded values and populate an array with the readings. The \textit{for} loop is then used to get 100 readings from the LIDAR-Lite laser using the \textit{lidar\_read(fs)} function and also rotating the stepper motor before each of the calculation using the \textit{step(num\_step)} function. The \textit{step(num\_step)} function is calling a shell script that is doing calls to the GPIO interface, making the stepper motor to take 8 micro-steps, or in other terms, one full step. Before the end of the \textit{while} loop, the message is being published to \textbackslash\textit{scan}.
-%TODO: Allign the number of readings to the final code.
+%TODO: Align the number of readings to the final code.
 %Thomas: The final sentence seems to appear from out of nowhere
 
 \lstinputlisting[firstline=1, lastline=16, title=gpioStuff.sh, language=sh]{../code/gpioThing.sh}
