Added development diagram v2

--- a/report/sections/ch6-discussion.tex
+++ b/report/sections/ch6-discussion.tex
@@ -1,3 +1,10 @@
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=.5]{images/developmentdiagram.png}
+	\caption{Diagram of the modules we have developed}
+	\label{fig:developmentdiagram2}
+\end{figure}
+
 The table below displays how well we achieved the testing goals set by us during the problem definition. We have only managed to achieve 1 out of the 3 original requirements.
 %Maybe some sort of elaboration
 
