Swapping sections, adding lidar.launch file + cleanup

--- a/report/sections/ch4-configuring-up-mapping.tex
+++ b/report/sections/ch4-configuring-up-mapping.tex
@@ -20,7 +20,7 @@ Nodes are the smallest pieces of ROS that are put together to form a full applic
 
 Roslaunch is the ROS command that allows starting multiple nodes, and also allows giving parameters to nodes. Roslaunch executes nodes that are specified in an XML file you give it, called the launchfile.
 
-%TODO: include our launchfile here
+\lstinputlisting[firstline=1, lastline=11, title=lidar.launch, language=xml]{../code/lidar.launch}
 
 \subsection{something else}
 %TODO: change subsection title
