Still missing bags, but added ssh and stuff

--- a/report/sections/ch4-configuring-up-mapping.tex
+++ b/report/sections/ch4-configuring-up-mapping.tex
@@ -1,32 +1,38 @@
 \clearpage
 \section{Configuring ROS for mapping}
 
-During the installation of ROS on Ubuntu a new package named Hector-slam was discovered.
-This package allows ROS to generate a map without the use of the GMapping package, which was one of the packages that caused issue during the installation process on Raspbian. Its biggest advantage is that it does not rely on odometry to know whether the reference frame has changed.
-%TODO: we talk about Hector slam here, but we already mentioned it before.
+During the installation of ROS on Ubuntu, a new package named Hector-slam was discovered. This package allows ROS to generate a map without the use of the GMapping package, which was one of the packages that caused issue during the installation process on Raspbian. Its biggest advantage is that it does not rely on odometry to know whether the reference frame has changed. Odometry is the use of data from sensors to estimate the difference in position over time. It is used by robotic systems to estimate their position relative to a starting point. It is also important to highlight that is does not determine, but estimates this position in space and time.
 
 \subsection{How ROS works}
-During our development, we gained a deep understanding of how all the moving parts in ROS work together.
+During our development, we gained a deep understanding of how all the moving parts in ROS work well together. The following diagram showcases the general flow of how the ROS system that we built up works.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\linewidth]{images/ROSflow.png}
-	\caption{Ros flow}
+	\caption{ROS flow diagram, showcasing the map generation from sensory readings}
 \end{figure}
 
-Roscore is the main process behind ROS. It allows for all running nodes to talk to each other. By itself it does nothing.
+\textbf{Roscore} is the main process behind ROS and it allows for all running nodes to talk to each other, although by itself it does nothing, just keeps running in the background.
 
-Nodes are the smallest pieces of ROS that are put together to form a full application. They are run as separate applications, all with their own executable files. The only way nodes communicate is through the roscore. To make a node, it is necessary to use the ROS library in whatever programming language is desired.
+Nodes are the smallest parts of ROS that are put together to form a full application. They are run as separate processes, all with their own executable files. The only way nodes communicate is through the roscore. To make a node, it is necessary to use or create a ROS library, written in any desired programming language.
 
-Roslaunch is the ROS command that allows starting multiple nodes, and also allows giving parameters to nodes. Roslaunch executes nodes that are specified in an XML file you give it, called the launchfile.
+\textbf{Roslaunch} is the ROS command that allows starting multiple nodes, and also allows giving parameters to nodes. Roslaunch executes nodes that are specified in an XML file you give it, called the launchfile.
 
 \lstinputlisting[firstline=1, lastline=11, title=lidar.launch, language=xml]{../code/lidar.launch}
 
-\subsection{something else}
-%TODO: change subsection title
-During this stage of testing, ROS gathers the data and generates the map directly on the Raspberry Pi. The Raspberry Pi is accessed through SSH and the generated map is then broadcast to computer through the SSH connection.
+%TODO: Talk about bag files here
 
-%TODO: Talk about SSHing into ROS here - Anthony will do that.
+\subsection{Developing for ROS}
+During this stage of development, the gathering the data happens on the Raspberry Pi, while a map is generated using ROS. The Raspberry Pi is accessed through SSH and the generated map is then broadcasted to another computer through that SSH connection, for visualization using the tool called rviz. 
+
+To achieve this, we had to set up a direct connection between one of our developer computers running Ubuntu and the Raspberry Pi using a CAT5 Ethernet cable. Then we created a new network settings, set the IPv4 method to be 'Shared to other computers' which bridge the two network adapters and get internet access to the Raspberry Pi from our own computers, connected to the internet via Wi-Fi. Then we located the leases and found the IP address assigned to the connected device. To connect via ssh we used the following command line:
+\lstset{language=sh}
+\begin{lstlisting}
+	>> ssh -Y username@ip-address
+\end{lstlisting}
+This enabled us to connect to the Raspberry and by using the \textit{-Y} flag, it allowed us to stream the graphical application using X11 forwarding.
+
+Although, this seemed to be working quite well, this operation required quite a lot of memory and processing power, therefore some issues were experienced:
 
 \begin{figure}[H]
 	\centering
@@ -34,8 +40,12 @@ During this stage of testing, ROS gathers the data and generates the map directl
 	\caption{The resource usage}
 \end{figure}
 
-
-After testing the Hector SLAM some lag issues were experienced, which seemed to be caused by multiple things: One thing could be that generating the map on the actual Raspberry Pi required too many resources from the CPU, another could be that the transfer of the visualization to the computer screen required more bandwidth than there could be supplied.
+Looking at the figure above, we can observe several things by running the mapping operation: by generating the actual map directly on the Raspberry Pi required too many resources from the CPU, and that the rendering of the visualization tool, rviz, channeled through the SSH connection to the computer screen required more bandwidth than there could be supplied. This caused a terrible lag and a bad experience both for us developing, but for the end result too.
 
 To reduce the amount of resources used by the Raspberry Pi, the map needs to be generated and visualized using separate computing unit. ROS is built to have separate nodes with a main computing unit.
 
+To copy files to and from the Raspberry, we used the \textit{scp} utility, and therefore no version control setup was not necessary on the controller. The command line was used to transfer .bag files and source code:
+\lstset{language=sh}
+\begin{lstlisting}
+	>> scp username@from-ip-address:~/file /home/mylocaluser/to-location/
+\end{lstlisting}
