--- a/report/sections/ch4-laser.tex
+++ b/report/sections/ch4-laser.tex
@@ -63,8 +63,8 @@ The assembling of the laser happened in the following way:
 The laser can be interfaced through I2C (Inter-Integrated Circuit) or PWM (Pulsed Width Modulation)~\cite{lidarsum}. The default I2C address for the laser is 0x62, which we could validate by running the following command:
 \lstset{language=sh}
 \begin{lstlisting}
-	>>	sudo i2cdetect -y 1
-	>>
+	>> $ sudo i2cdetect -y 1
+	>> $
 		  0  1  2  3  4  5  6  7  8  9  a  b  c  d  e  f
 		  00:          -- -- -- -- -- -- -- -- -- -- -- -- --
 		  10: -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
