added health and safety chapter
Currently empty and contains text from P1

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -37,6 +37,9 @@
 \input{sections/ch2-stakeholder-analysis.tex}
 
 \input{sections/ch2-risk-analysis.tex}
+
+\input{sections/ch2-health-safety-analysis.tex}
+
 %Chapter 3  ------------
 \clearpage
 \chapter{Problem Definition}\label{ch:problem_definition}
