Added some more text to play around tomorrow.

--- a/report/sections/ch4-laser.tex
+++ b/report/sections/ch4-laser.tex
@@ -1,5 +1,5 @@
 \clearpage
-\section{Laser} %TODO: ROHS complian and Class 1 laser - removing the casing can cause problems and decalssify it - ADD THIS TO IT'S OWN SECTION
+\section{Laser}
 
 Our laser of choice, the LIDAR-Lite SEN-13167, is a SoC (System-on-a-Chip) solution for optical distance measurements applications. It has a 4.7 - 5.5 V nominal and 6 V potentially maximum DC operating range. The sensor has a theoretical limit of a 40m range and 100Hz rep rate. The laser emitters' accuracy is estimated to be +/- 2.5cm with an acquisition time of less then 0.02s or 20ms. These specifications allows us to get an accurate image of the environments specified in our test cases~\cite{lidarsum}.
 
