--- a/report/sections/ch2-health-safety-analysis.tex
+++ b/report/sections/ch2-health-safety-analysis.tex
@@ -2,3 +2,15 @@
 \section{Health and Safety analysis}
 
 %Implementing an electrical solution into a bicycle shed can pose a threat when it comes to electrical wires. It is important that the different weather conditions are kept in mind when dealing with outdoor electrical circuits, where there might 14 Chapter 2. Problem Analysis be harmful or potentially lethal electrical conditions. Rainy weather, heavy fog and general moisture are some of the weather conditions that pose a safety threat towards our electrical circuits. All of the materials mentioned in the previous section, that were examined from an environmental standpoint, does not have any direct health concerns towards end users. For example, ABS plastic is only hazardous when heated up during production, as it may produce fumes of acrylonitrile, that is acutely toxic and highly flammable [19].
+
+% ==================== Text to add
+
+% http://en.wikipedia.org/wiki/Laser_safety#Class_1
+
+%http://kb.pulsedlight3d.com/support/solutions/articles/5000548623-laser-safety
+
+% "Note: The LIDAR Lite is designated as Class 1 during all procedures of operation, however operating the sensor without its optics or housing or making modifications to the housing can result in direct exposure to laser radiation and the risk of permanent eye damage. Direct eye contact should be avoided and under no circumstances should you ever stare straight into the emitter."
+
+% "CLASS 1 LASER PRODUCT CLASSIFIED EN/IEC 60825-1 2007. Complies with US FDA performance standards for laser products except for deviations pursuant to Laser Notice No. 50, dated June 24, 2007. System contains no user serviceable components. Repair or service of the system is only to be handled by factory-trained technicians. No Service by the user is allowed."
+
+% ROHS complian and Class 1 laser - removing the casing can cause problems and decalssify it
